issues/403.txt
[17:46:32] $ 
~/Developer/vcs/github.twardoch/pub/svgn
[18:21:12] $ repomix -i llms.txt -o llms.txt .; gitnextvers .

📦 Repomix v0.3.7

No custom config found at repomix.config.json or global config at /Users/adam/.config/repomix/repomix.config.json.
You can add a config file for additional settings. Please check https://github.com/yamadashy/repomix for more information.
✔ Packing completed successfully!

📈 Top 5 Files by Character Count and Token Count:
──────────────────────────────────────────────────
1.  issues/401.txt (265,439 chars, 102,556 tokens, 34.8%)
2.  svgn/src/plugins/remove_attributes_by_selector.rs (22,882 chars, 4,997 tokens, 1.7%)
3.  svgn/src/plugins/remove_unknowns_and_defaults.rs (21,145 chars, 4,689 tokens, 1.6%)
4.  svgn/src/plugins/convert_colors.rs (20,945 chars, 5,509 tokens, 1.9%)
5.  svgn/src/collections.rs (18,008 chars, 5,407 tokens, 1.8%)

🔎 Security Check:
──────────────────
✔ No suspicious files detected.

📊 Pack Summary:
────────────────
  Total Files: 112 files
  Total Chars: 1,109,645 chars
 Total Tokens: 298,457 tokens
       Output: llms.txt
     Security: ✔ No suspicious files detected

🎉 All Done!
Your repository has been successfully packed.

💡 Repomix is now available in your browser! Try it at https://repomix.com
/Users/adam/Developer/vcs/github.twardoch/pub/svgn
* Creating isolated environment: virtualenv+pip...
The --no-wheel and --wheel options are deprecated. They have no effect for Python > 3.8 as wheel is no longer bundled in virtualenv.
ERROR Source /Users/adam/Developer/vcs/github.twardoch/pub/svgn does not appear to be a Python project: no pyproject.toml or setup.py
2025-07-03 18:32:18 | INFO     | Working in directory: /Users/adam/Developer/vcs/github.twardoch/pub/svgn
2025-07-03 18:32:18 | INFO     | Stashing uncommitted changes before pull …
2025-07-03 18:32:18 | INFO     | Pulling from remote 'origin' …
2025-07-03 18:32:19 | INFO     | Successfully pulled from remote
2025-07-03 18:32:19 | INFO     | Re-applying stashed changes …
2025-07-03 18:32:19 | INFO     | Successfully re-applied stashed changes
2025-07-03 18:32:19 | INFO     | Last version tag: v1.0.16
2025-07-03 18:32:19 | INFO     | Next version will be: v1.0.17
╭───────────────────── 📋 Version Info ──────────────────────╮
│ Current version: v1.0.16                                   │
│ Next version: v1.0.17                                      │
╰────────────────────────────────────────────────────────────╯
2025-07-03 18:32:19 | INFO     | Adding all untracked and modified files...
2025-07-03 18:32:19 | INFO     | Committing changes with message: v1.0.17
2025-07-03 18:32:19 | INFO     | Creating tag: v1.0.17
2025-07-03 18:32:19 | INFO     | Pushing commits and tags to remote...
╭──────────────────────── 🎉 Success ────────────────────────╮
│ ✅ Successfully created and pushed version v1.0.17         │
╰────────────────────────────────────────────────────────────╯
* Creating isolated environment: virtualenv+pip...
The --no-wheel and --wheel options are deprecated. They have no effect for Python > 3.8 as wheel is no longer bundled in virtualenv.
ERROR Source /Users/adam/Developer/vcs/github.twardoch/pub/svgn does not appear to be a Python project: no pyproject.toml or setup.py
Using Python 3.12.8 environment at: /Library/Frameworks/Python.framework/Versions/3.12
Resolved 61 packages in 646ms
Audited 61 packages in 0.55ms
~/Developer/vcs/github.twardoch/pub/svgn
[18:32:26] $ ./build.sh
Building the svgn project...
   Compiling proc-macro2 v1.0.95
   Compiling unicode-ident v1.0.18
   Compiling libc v0.2.174
   Compiling zerocopy v0.8.26
   Compiling cfg-if v1.0.1
   Compiling libm v0.2.15
   Compiling autocfg v1.5.0
   Compiling serde v1.0.219
   Compiling siphasher v1.0.1
   Compiling siphasher v0.3.11
   Compiling arrayvec v0.7.6
   Compiling memchr v2.7.5
   Compiling utf8parse v0.2.2
   Compiling colorchoice v1.0.4
   Compiling anstyle v1.0.11
   Compiling itoa v1.0.15
   Compiling is_terminal_polyfill v1.70.1
   Compiling anstyle-parse v0.2.7
   Compiling equivalent v1.0.2
   Compiling hashbrown v0.15.4
   Compiling dtoa v1.0.10
   Compiling phf_shared v0.11.3
   Compiling phf_shared v0.10.0
   Compiling anstyle-query v1.1.3
   Compiling anstream v0.6.19
   Compiling dtoa-short v0.3.5
   Compiling strsim v0.11.1
   Compiling float_next_after v1.0.0
   Compiling stable_deref_trait v1.2.0
   Compiling clap_lex v0.7.5
   Compiling serde_json v1.0.140
   Compiling heck v0.5.0
   Compiling toml_write v0.1.2
   Compiling regex-syntax v0.8.5
   Compiling num-traits v0.2.19
   Compiling byteorder v1.5.0
   Compiling thiserror v1.0.69
   Compiling smallvec v1.15.1
   Compiling winnow v0.7.11
   Compiling clap_builder v4.5.40
   Compiling phf v0.10.1
   Compiling servo_arc v0.3.0
   Compiling bitflags v2.9.1
   Compiling log v0.4.27
   Compiling fxhash v0.2.1
   Compiling precomputed-hash v0.1.1
   Compiling ryu v1.0.20
   Compiling new_debug_unreachable v1.0.6
   Compiling once_cell v1.21.3
   Compiling urlencoding v2.1.3
   Compiling quote v1.0.40
   Compiling aho-corasick v1.1.3
   Compiling getrandom v0.2.16
   Compiling quick-xml v0.31.0
   Compiling syn v2.0.104
   Compiling rand_core v0.6.4
   Compiling indexmap v2.10.0
   Compiling ppv-lite86 v0.2.21
   Compiling euclid v0.22.11
   Compiling rand_chacha v0.3.1
   Compiling regex-automata v0.4.9
   Compiling rand v0.8.5
   Compiling lyon_geom v1.0.6
   Compiling phf_generator v0.11.3
   Compiling phf_generator v0.10.0
   Compiling phf_codegen v0.10.0
   Compiling selectors v0.25.0
   Compiling lyon_path v1.0.7
   Compiling lyon_tessellation v1.0.15
   Compiling lyon_algorithms v1.0.5
   Compiling serde_derive v1.0.219
   Compiling phf_macros v0.11.3
   Compiling cssparser-macros v0.6.1
   Compiling clap_derive v4.5.40
   Compiling thiserror-impl v1.0.69
   Compiling derive_more v0.99.20
   Compiling lyon v1.0.1
   Compiling phf v0.11.3
   Compiling cssparser v0.31.2
   Compiling regex v1.11.1
   Compiling clap v4.5.40
   Compiling toml_datetime v0.6.11
   Compiling serde_spanned v0.6.9
   Compiling toml_edit v0.22.27
   Compiling toml v0.8.23
   Compiling svgn v0.1.0 (/Users/adam/Developer/vcs/github.twardoch/pub/svgn/svgn)
    Finished `release` profile [optimized] target(s) in 2m 55s
Running tests...
   Compiling svgn v0.1.0 (/Users/adam/Developer/vcs/github.twardoch/pub/svgn/svgn)
warning: unused import: `svgn::ast::Document`
 --> svgn/examples/test_style_plugins.rs:3:5
  |
3 | use svgn::ast::Document;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: `svgn` (example "test_style_plugins") generated 1 warning (run `cargo fix --example "test_style_plugins"` to apply 1 suggestion)
error[E0382]: borrow of moved value: `plugin_names`
   --> svgn/tests/svgo_compatibility_tests.rs:15:20
    |
11  | ...ization(input: &str, expected: &str, plugin_names: V...
    |                                         ------------ move occurs because `plugin_names` has type `Vec<&str>`, which does not implement the `Copy` trait
12  | ...lugins = Vec::new();
13  | ...in plugin_names {
    |       ------------ `plugin_names` moved due to this implicit call to `.into_iter()`
14  | ...ut plugin = PluginConfig::new(name.to_string());
15  | ...me == plugin_names[0] && params.is_some() {
    |          ^^^^^^^^^^^^ value borrowed here after move
    |
note: `into_iter` takes ownership of the receiver `self`, which moves `plugin_names`
   --> /Users/adam/.rustup/toolchains/stable-x86_64-apple-darwin/lib/rustlib/src/rust/library/core/src/iter/traits/collect.rs:313:18
    |
313 |     fn into_iter(self) -> Self::IntoIter;
    |                  ^^^^
help: consider iterating over a slice of the `Vec<&str>`'s content to avoid moving into the `for` loop
    |
13  |     for name in &plugin_names {
    |                 +

For more information about this error, try `rustc --explain E0382`.
error: could not compile `svgn` (test "svgo_compatibility_tests") due to 1 previous error
~/Developer/vcs/github.twardoch/pub/svgn
[18:35:29] $ 